config firebase cloud message (FCM) in flutter the firt

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   get: any
   persistent_bottom_nav_bar: any
   footer: any
+  firebase_cloud_messaging: ^4.0.4+1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
