--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,9 @@ dependencies:
   persistent_bottom_nav_bar: any
   footer: any
   firebase_cloud_messaging: ^4.0.4+1
+  firebase_auth: any
+  cloud_firestore: any
+  firebase_core: any 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
